tests/snapshots/snapshots__c_sample_budget_20.snap
---
source: tests/snapshots.rs
expression: output
---
sample.c
    30→int process …
    37→Token *token_new …
