tests/snapshots/snapshots__c_sample_budget_200.snap
---
source: tests/snapshots.rs
expression: output
---
sample.c
     6→#define MAX_TOKENS …
     7→#define MIN …
     9→typedef struct Token { …
    15→/* The kind of a lexical token. */
    16→enum TokenKind …
    17→    TOKEN_IDENT,
    18→    TOKEN_NUMBER,
    19→    TOKEN_SYMBOL,
    20→};
    22→typedef int (*Comparator …
    30→int process(const char *input, int len) {
    34→static void helper(void) {}
    37→Token *token_new(int kind, int start, int end) {
    45→void token_free(Token *t) {
    50→static int _parse_next(const char *input, int pos) {
    56→void *alloc_node(size_t size);
