tests/snapshots/snapshots__c_sample_budget_50.snap
---
source: tests/snapshots.rs
expression: output
---
sample.c
    16→enum TokenKind …
    30→int process(const char *input, int len) {
    37→Token *token_new(int kind, int start, int end) {
