tests/snapshots/snapshots__char_budget_mitt.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (1854 tokens, 5384 chars)

README.md
     9→# Mitt
    21→## Table of Contents
    30→## Install
    56→## Usage
    81→### Typescript
   113→## Examples & Demos
   123→## API
   127→#### Table of Contents
   138→### mitt
   144→### all
   148→### on
   152→#### Parameters
   157→### off
   162→#### Parameters
   167→### emit
   174→#### Parameters
   179→## Contribute
   184→### Reporting Issues
   189→### Submitting pull requests
   203→## License

src/index.ts
     1→export type EventType …
     5→export type Handler …
     6→export type WildcardHandler …
    12→export type EventHandlerList …
    13→export type WildCardEventHandlerList …
    18→export type EventHandlerMap …
    23→export interface Emitter …
    26→	on<Key extends keyof Events>(type: Key, handler: Handler<Events[Key]>): void;
    27→	on(type: '*', handler: WildcardHandler<Events>): void;
    29→	off<Key extends keyof Events>(
    30→		type: Key,
    31→		handler?: Handler<Events[Key]>
    32→	): void;
    33→	off(type: '*', handler: WildcardHandler<Events>): void;
    35→	emit<Key extends keyof Events>(type: Key, event: Events[Key]): void;
    36→	emit<Key extends keyof Events>(
    37→		type: undefined extends Events[Key] ? Key : never
    38→	): void;
    42→ * Mitt: Tiny (~200b) functional event emitter / pubsub.
    43→ * @name mitt
    44→ * @returns {Mitt}
    46→export default function mitt<Events extends Record<EventType, unknown>>(
    47→	all?: EventHandlerMap<Events>
    48→): Emitter<Events> {

package.json
     2→  "name": "mitt",
     3→  "version": "3.0.1",
     4→  "description": "Tiny 200b functional Event Emitter / pubsub.",
     5→  "module": "dist/mitt.mjs",
     6→  "main": "dist/mitt.js",
     7→  "jsnext:main": "dist/mitt.mjs",
     8→  "umd:main": "dist/mitt.umd.js",
     9→  "source": "src/index.ts",
    10→  "typings": "index.d.ts",
    11→  "exports": {
    12→    "types": "./index.d.ts",
    13→    "module": "./dist/mitt.mjs",
    14→    "import": "./dist/mitt.mjs",
    15→    "require": "./dist/mitt.js",
    16→    "default": "./dist/mitt.mjs"
    17→  },
    18→  "scripts": {
    19→    "test": "npm-run-all --silent typecheck lint mocha test-types",
    20→    "mocha": "mocha test",
    21→    "test-types": "tsc test/test-types-compilation.ts --noEmit --strict",
    22→    "lint": "eslint src test --ext ts --ext js",
    23→    "typecheck": "tsc --noEmit",
    24→    "bundle": "microbundle -f es,cjs,umd",
    25→    "build": "npm-run-all --silent clean -p bundle -s docs",
    26→    "clean": "rimraf dist",
    27→    "docs": "documentation readme src/index.ts --section API -q --parse-extension ts",
    28→    "release": "npm run -s build -s && npm t && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish"
    29→  },
    30→  "repository": "developit/mitt",
    31→  "keywords": [
    32→    "events",
    33→    "eventemitter",
    34→    "emitter",
    35→    "pubsub"
    36→  ],
    37→  "homepage": "https://github.com/developit/mitt",
    38→  "authors": [
    39→    "Jason Miller <jason@developit.ca>"
    40→  ],
    41→  "license": "MIT",
    42→  "files": [
    43→    "dist",
    44→    "index.d.ts"
    45→  ],
    46→  "mocha": {
    47→    "extension": [
    48→      "ts"
    49→    ],
    50→    "require": [
    51→      "ts-node/register",
    52→      "esm"
    53→    ],
    54→    "spec": [
    55→      "test/*_test.ts"
    56→    ]
    57→  },
    58→  "prettier": {
    59→    "singleQuote": true,
    60→    "trailingComma": "none"
    61→  },
    62→  "devDependencies": {
    63→    "@types/chai": "^4.2.11",
    64→    "@types/mocha": "^7.0.2",
    65→    "@types/sinon": "^9.0.4",
    66→    "@types/sinon-chai": "^3.2.4",
    67→    "@typescript-eslint/eslint-plugin": "^5.61.0",
    68→    "@typescript-eslint/parser": "^5.61.0",
    69→    "chai": "^4.2.0",
    70→    "documentation": "^14.0.2",
    71→    "eslint": "^7.32.0",
    72→    "eslint-config-developit": "^1.2.0",
    73→    "eslint-plugin-compat": "^4.1.4",
    74→    "esm": "^3.2.25",
    75→    "microbundle": "^0.12.3",
    76→    "mocha": "^8.0.1",
    77→    "npm-run-all": "^4.1.5",
    78→    "prettier": "^2.8.8",
    79→    "rimraf": "^3.0.2",
    80→    "sinon": "^9.0.2",
    81→    "sinon-chai": "^3.5.0",
    82→    "ts-node": "^10.9.1",
    83→    "typescript": "^4.9.5"
    84→  }

tsconfig.json
     2→	"compileOnSave": false,
     3→	"compilerOptions": {
     4→		"strict": true,
     5→		"noEmit": true,
     6→		"declaration": true,
     7→		"moduleResolution": "node",
     8→		"skipLibCheck": true,
     9→		"esModuleInterop": true,
    10→	},
    11→	"include": [
    12→		"src/*.ts",
    13→		"test/*.ts"
    14→	]

test/index_test.ts

test/test-types-compilation.ts
     5→interface SomeEventData …
     9→const emitter …
    15→const barHandler = (x?: number) => {};
    16→const fooHandler = (x: string) => {};
    17→const wildcardHandler = (
    18→	_type: 'foo' | 'bar' | 'someEvent',
    19→	_event: string | SomeEventData | number | undefined
    20→) => {};
