tests/snapshots/snapshots__char_budget_pluggy.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (2879 tokens, 9404 chars)

README.rst
     1→====================================================
     2→pluggy - A minimalist production ready plugin system
     3→====================================================
     4→
     5→|pypi| |conda-forge| |versions| |github-actions| |gitter| |black| |codecov|
     6→
     7→This is the core framework used by the `pytest`_, `tox`_, and `devpi`_ projects.
     8→
     9→Please `read the docs`_ to learn more!
    10→
    11→A definitive example
    12→====================
    13→.. code-block:: python
    14→
    15→    import pluggy
    16→
    17→    hookspec = pluggy.HookspecMarker("myproject")
    18→    hookimpl = pluggy.HookimplMarker("myproject")
    19→
    20→
    21→    class MySpec:
    22→        """A hook specification namespace."""
    23→
    24→        @hookspec
    25→        def myhook(self, arg1, arg2):
    26→            """My special little hook that you can customize."""
    27→
    28→
    29→    class Plugin_1:
    30→        """A hook implementation namespace."""
    31→
    32→        @hookimpl
    33→        def myhook(self, arg1, arg2):
    34→            print("inside Plugin_1.myhook()")
    35→            return arg1 + arg2
    36→
    37→
    38→    class Plugin_2:
    39→        """A 2nd hook implementation namespace."""
    40→
    41→        @hookimpl
    42→        def myhook(self, arg1, arg2):
    43→            print("inside Plugin_2.myhook()")
    44→            return arg1 - arg2
    45→
    46→
      →…

changelog/

pyproject.toml
     1→[build-system]
     8→[project]
    38→[dependency-groups]

CHANGELOG.rst
     1→=========
     2→Changelog
     3→=========
     4→
      →…

MANIFEST.in
     1→include CHANGELOG
     2→include README.rst
     3→include setup.py
     4→include tox.ini
     5→include LICENSE
     6→graft testing
     7→recursive-exclude * *.pyc *.pyo

codecov.yml
     1→coverage:
     7→comment: off

docs/api_reference.rst
     1→:orphan:

docs/examples/eggsample-spam/eggsample_spam.py
     5→def eggsample_add_ingredients(ingredients):
    15→def eggsample_prep_condiments(condiments):

docs/examples/toy-example.py
     8→class MySpec:
    10→
    12→    def myhook(self, arg1, arg2):
    16→class Plugin_1:
    18→
    20→    def myhook(self, arg1, arg2):
    25→class Plugin_2:
    27→
    29→    def myhook(self, arg1, arg2):

docs/index.rst
     1→``pluggy``

downstream/README.md
     1→This directory contains scripts for testing some downstream projects
     2→against your current pluggy worktree.

downstream/conda.sh
     2→set -eux -o pipefail

downstream/datasette.sh
     2→set -eux -o pipefail

downstream/devpi.sh
     2→set -eux -o pipefail

downstream/hatch.sh
     2→set -eux -o pipefail

downstream/pytest.sh
     2→set -eux -o pipefail

downstream/python-lsp-server.sh
     1→set -eux -o pipefail

downstream/tox.sh
     2→set -eux -o pipefail

scripts/release.py
     2→Release script.

src/pluggy/__init__.py
     1→__all__ = [
    32→def __getattr__ …

src/pluggy/_callers.py
     2→Call loop machinery
    22→# Need to distinguish between old- and new-style hook wrappers.
    23→# Wrapping with a tuple is the fastest type-safe way I found to do it.
    24→Teardown: TypeAlias = Generator[None, object, object]
    27→def run_old_style_hookwrapper …

src/pluggy/_hooks.py
     2→Internal hook annotation, representation and calling machinery.
    40→class HookspecOpts(TypedDict):
    42→
    43→    #: Whether the hook is :ref:`first result only <firstresult>`.
    44→    firstresult: bool
    45→    #: Whether the hook is :ref:`historic <historic>`.
    46→    historic: bool
    47→    #: Whether the hook :ref:`warns when implemented <warn_on_impl>`.
    48→    warn_on_impl: Warning | None
    49→    #: Whether the hook warns when :ref:`certain arguments are requested
    50→    #: <warn_on_impl>`.
    51→    #:
    52→    #: .. versionadded:: 1.5
    53→    warn_on_impl_args: Mapping[str, Warning] | None
    56→class HookimplOpts(TypedDict):
    58→
    59→    #: Whether the hook implementation is a :ref:`wrapper <hookwrapper>`.
    60→    wrapper: bool
    61→    #: Whether the hook implementation is an :ref:`old-style wrapper
    62→    #: <old_style_hookwrappers>`.
    63→    hookwrapper: bool
    64→    #: Whether validation against a hook specification is :ref:`optional
    65→    #: <optionalhook>`.
    66→    optionalhook: bool
    67→    #: Whether to try to order this hook implementation :ref:`first
    68→    #: <callorder>`.
    69→    tryfirst: bool
    70→    #: Whether to try to order this hook implementation :ref:`last
    71→    #: <callorder>`.
    72→    trylast: bool
    73→    #: The name of the hook specification to match, see :ref:`specname`.
    74→    specname: str | None
    78→class HookspecMarker:
    85→
    86→    __slots__ = ("project_name",)
    87→
    88→    def __init__ …
    92→    def __call__ …
   102→    def __call__ …
   111→    def __call__ …
   165→class HookimplMarker:
   172→
   173→    __slots__ = ("project_name",)
   174→
   175→    def __init__ …
   179→    def __call__ …
   191→    def __call__ …
   202→    def __call__ …
   281→def normalize_hookimpl_opts …
   293→def varnames …
   359→class HookRelay:
   362→
   363→    __slots__ = ("__dict__",)
   364→
   365→    def __init__ …
   370→        def __getattr__ …
   382→class HookCaller:
   384→
   385→    __slots__ = (
   386→        "name",
   387→        "spec",
   388→        "_hookexec",
   389→        "_hookimpls",
   390→        "_call_history",
   391→    )
   392→
   393→    def __init__ …
   420→    def has_spec …
   424→    def set_specification …
   438→    def is_historic …
   449→    def get_hookimpls …
   477→    def __repr__ …
   499→    def __call__ …
   516→    def call_historic …
   543→    def call_extra …
   593→class _SubsetHookCaller …
   612→    def __init__ …
   619→    def _hookimpls …
   627→    def spec …
   631→    def _call_history …
   634→    def __repr__ …
   639→class HookImpl:
   641→
   642→    __slots__ = (
   643→        "function",
   644→        "argnames",
   645→        "kwargnames",
   646→        "plugin",
   647→        "opts",
   648→        "plugin_name",
   649→        "wrapper",
   650→        "hookwrapper",
   651→        "optionalhook",
   652→        "tryfirst",
   653→        "trylast",
   654→    )
   655→
   656→    def __init__ …
   692→    def __repr__ …
   697→class HookSpec:
   698→    __slots__ = (
   699→        "namespace",
   700→        "function",
   701→        "name",
   702→        "argnames",
   703→        "kwargnames",
   704→        "opts",
   705→        "warn_on_impl",
   706→        "warn_on_impl_args",
   707→    )
   708→
   709→    def __init__ …

src/pluggy/_manager.py
    52→class PluginValidationError(Exception):
    58→
    59→    def __init__ …
    65→class DistFacade:
    67→
    68→    def __init__ …
    72→    def project_name …
    76→    def __getattr__ …
    79→    def __dir__ …
    83→class PluginManager:
    99→
   100→    def __init__ …
   125→    def register …
   176→    def parse_hookimpl_opts …
   201→    def unregister …
   233→    def set_blocked …
   238→    def is_blocked …
   242→    def unblock …
   252→    def add_hookspecs …
   278→    def parse_hookspec_opts …
   296→    def get_plugins …
   300→    def is_registered …
   304→    def get_canonical_name …
   315→    def get_plugin …
   319→    def has_plugin …
   323→    def get_name …
   379→    def check_pending …
   395→    def load_setuptools_entrypoints …
   425→    def list_plugin_distinfo …
   430→    def list_name_plugin …
   434→    def get_hookcallers …
   450→    def add_hookcall_monitoring …
   487→    def enable_tracing …
   512→    def subset_hook_caller …

src/pluggy/_result.py
     2→Hook wrapper "result" utilities.
    20→class HookCallError(Exception):
    25→class Result(Generic[ResultType]):
    28→
    29→    __slots__ = ("_result", "_exception", "_traceback")
    30→
    31→    def __init__ …
    43→    def excinfo …
    52→    def exception …
    57→    def from_call …
    67→    def force_result …
    80→    def force_exception …
    91→    def get_result …

src/pluggy/_tracing.py
     2→Tracing utils
    16→class TagTracer:
    17→    def __init__ …
    22→    def get …
    48→    def setwriter …
    51→    def setprocessor …
    59→class TagTracerSub:
    60→    def __init__ …
    64→    def __call__ …
    67→    def get …

src/pluggy/_warnings.py
     4→class PluggyWarning(UserWarning):
     6→
     7→    __module__ = "pluggy"
    11→class PluggyTeardownRaisedWarning(PluggyWarning):
    26→
    27→    __module__ = "pluggy"

testing/test_hookcaller.py
    34→class AddMeth:

tox.ini
     1→[tox]
