tests/snapshots/snapshots__char_budget_sps.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 8000 (2568 tokens, 9258 chars)

README.md
     1→# sps
     3→> [!WARNING]
     4→> I will scrap this project in favor of sps v2 some time in the future (when v2 is built and ready which might take a while). The reason is that I am planning to
     5→> implement my own packaging system, my own version of atomic installs / updated complete with automatic snapshots and full, down to single package rollbacks +
     6→> automatic cve checks and some other stuffs. After a lot of thinking and looking at Homebrew's architecture I've come to the conclusion that I do not like it (burn
     7→> me for it ;). Defining my own build system will allow for a more performant and maintainable system in the long run. (Just a bit anxious about how to host packages
     8→> / do all the repo stuff. Like really anxious but I'll figure it out)
     9→>
    10→> Another reason is that I made some choices on internal architecture in the beginning that I have come to see as suboptimal but can not easily refactor so this will
    11→> allow me to go for the better option right from the get go (go for rx/tx for status propagation from the start, build the core fully async etc.)
    12→>
    13→> I have just made the repo for sps2 public. There is no repositories yet and core systems still do not work and need debugging. However it passes ci and the
    14→> architecture is largely in place. I will have to create a automatic upstream tracking system, automatic builds and create build scripts for the most important
    34→## ⚙️ Project Structure
    42→## 🚧 Current Status
    54→## 🚀 Roadmap
    63→## Trying it out:
    77→## 📦 Usage
   123→## 🏗️ Building from Source
   138→## 📥 Using the Latest Nightly Build

Cargo.toml
     1→[workspace]
     2→resolver = "3"
     3→members = [
     4→    "sps",          # was "sps-cli"
     5→    "sps-common",
     6→    "sps-core",
     7→    "sps-net",
     8→]
     9→
    10→[patch.crates-io]
    16→[workspace.dependencies]
    43→[profile.release]
    44→lto = true
    45→codegen-units = 1
    46→strip = true

sps/Cargo.toml
     1→[package]
    13→[[bin]]
    14→name = "sps"
    15→path = "src/main.rs"
    16→
    17→[dependencies]
    54→[build-dependencies]
    55→clap_complete = "4.5.57"

sps-common/Cargo.toml
     1→[package]
    10→[dependencies]

sps-core/Cargo.toml
     1→[package]
    10→[dependencies]

sps-net/Cargo.toml
     1→[package]
    10→[dependencies]

sps/src/cli.rs
     2→//! Defines the command-line argument structure using clap.
    35→pub struct CliArgs …
    44→pub enum Command …
    56→impl Command …
    57→    pub async fn run(&self, config: &Config, cache: Arc<Cache>) -> Result<()> {

sps-core/src/build/env.rs
   141→pub struct BuildEnvironment …
   164→impl BuildEnvironment …
   166→    pub fn new …
   463→    pub fn apply_to_command …
   476→    pub fn get_path_string …
   482→    pub fn get_vars …
   488→    pub fn get_var …
   495→fn filter_initial_environment …

sps-net/src/api.rs
    36→pub async fn fetch_raw_formulae_json …
    69→pub async fn fetch_all_formulas …
    73→pub async fn fetch_all_casks …
    77→pub async fn fetch_formula …
   104→pub async fn fetch_cask …
   165→pub async fn get_formula …
   220→pub async fn get_all_formulas …
   228→pub async fn get_cask …
   259→pub async fn get_all_casks …

sps-net/src/http.rs
    18→pub type ProgressCallback …
    24→pub async fn fetch_formula_source_or_bottle …
    42→pub async fn fetch_formula_source_or_bottle_with_progress …
   147→pub async fn fetch_resource …
   155→pub async fn fetch_resource_with_progress …

sps-net/src/oci.rs
    24→pub const DEFAULT_GHCR_DOMAIN …
    37→pub struct OciManifestIndex …
    45→pub struct OciManifestDescriptor …
    55→pub struct OciPlatform …
    66→enum OciAuth …
    96→pub async fn download_oci_blob …
   114→pub async fn download_oci_blob_with_progress …
   182→pub async fn fetch_oci_manifest_index …
   190→pub fn build_oci_client …

sps-net/src/validation.rs
    67→pub fn verify_checksum …
    92→/// Verifies that the detected content type of the file matches the expected extension.
    93→pub fn verify_content_type(path: &Path, expected_ext: &str) -> Result<()> {
   120→/// Validates a URL, ensuring it uses the HTTPS scheme.
   121→pub fn validate_url(url_str: &str) -> Result<()> {

sps-common/src/cache.rs
    12→const CACHE_TTL …
    15→pub struct Cache …
    20→impl Cache …
    22→    pub fn new(config: &Config) -> Result<Self> {
    35→    pub fn get_dir(&self) -> &Path {
    40→    pub fn store_raw(&self, filename: &str, data: &str) -> Result<()> {
    48→    pub fn load_raw(&self, filename: &str) -> Result<String> {
    62→    pub fn is_cache_valid(&self, filename: &str) -> Result<bool> {
    78→    pub fn clear_file(&self, filename: &str) -> Result<()> {
    87→    pub fn clear_all(&self) -> Result<()> {
    96→    pub fn config(&self) -> &Config {

sps-common/src/config.rs
    15→pub struct Config …
    24→impl Config …
   199→pub fn load_config() -> Result<Config> {

sps-common/src/error.rs
     6→pub enum SpsError …
    89→impl From<std::io::Error> for SpsError …
    90→    fn from …
    95→impl From<reqwest::Error> for SpsError …
    96→    fn from …
   101→impl From<serde_json::Error> for SpsError …
   102→    fn from …
   107→impl From<semver::Error> for SpsError …
   108→    fn from …
   113→impl From<object::read::Error> for SpsError …
   114→    fn from …
   119→pub type Result …

sps-common/src/formulary.rs
    12→pub struct Formulary …
    17→impl Formulary …

sps-common/src/keg.rs
    13→pub struct InstalledKeg …
    21→pub struct KegRegistry …
    25→impl KegRegistry …

sps-common/src/pipeline.rs
    14→pub enum PipelinePackageType …
    20→pub enum JobAction …
    33→pub struct PlannedJob …
    42→pub struct WorkerJob …
    50→pub enum PipelineEvent …
   141→impl PipelineEvent …
   161→/// Represents the current processing state of a job in the pipeline.
   163→pub enum JobProcessingState …
   164→    /// Waiting for download to be initiated.
   165→    PendingDownload,
   166→    /// Download is in progress (managed by DownloadCoordinator).
   167→    Downloading,
   168→    /// Download completed successfully, artifact at PathBuf.
   169→    Downloaded(PathBuf),
   170→    /// Downloaded, but waiting for dependencies to be in Succeeded state.
   171→    WaitingForDependencies(PathBuf),
   172→    /// Dispatched to the core worker pool for installation/processing.
   173→    DispatchedToCore(PathBuf),
   174→    /// Installation/processing is in progress by a core worker.
   175→    Installing(PathBuf), // Path is still relevant
   176→    /// Job completed successfully.
   177→    Succeeded,
   178→    /// Job failed. The String contains the error message. Arc for cheap cloning.
   179→    Failed(Arc<SpsError>),
   180→}
   184→pub struct DownloadOutcome …
   191→pub struct PlannedOperations …

sps-core/src/check/installed.rs
    14→pub enum PackageType …
    15→    Formula,
    16→    Cask,
    17→}
    20→pub struct InstalledPackageInfo …
    39→pub async fn get_installed_packages …
   140→pub async fn get_installed_package …

sps-core/src/check/update.rs
    23→pub struct UpdateInfo …
    33→async fn ensure_api_data_cached(cache: &Cache) -> Result<()> {
    89→pub async fn check_for_updates …

sps-core/src/install/devtools.rs
     9→pub fn find_compiler …
    78→pub fn find_sdk_path …
   123→pub fn get_macos_version …
   160→pub fn get_arch_flag …

sps-core/src/install/extract.rs
   205→pub fn quarantine_extracted_apps_in_stage …
   235→pub fn extract_archive …
   302→fn extract_xz_tar_archive …

sps-core/src/install/mod.rs
    17→pub fn get_formula_opt_path …

sps/src/pipeline/downloader.rs
    28→impl DownloadCoordinator …
    29→    pub fn new …
    43→    pub async fn coordinate_downloads …

sps/src/pipeline/planner.rs
   191→impl<'a> OperationPlanner<'a> …
   192→    pub fn new …
   526→    pub async fn plan_operations …

sps/src/pipeline/runner.rs
    31→pub enum CommandType …
    38→pub struct PipelineFlags …
    67→pub async fn run_pipeline …

sps-core/src/utils/applescript.rs
    75→pub fn quit_app_gracefully(app_path: &Path) -> Result<()> {

sps-core/src/utils/xattr.rs
    26→pub fn has_quarantine_attribute(path: &Path) -> anyhow::Result<bool> {
    41→pub fn ensure_quarantine_attribute(path: &Path, agent: &str) -> anyhow::Result<()> {
    53→pub fn set_quarantine_attribute(path: &Path, agent_name: &str) -> Result<()> {

sps-core/src/pipeline/engine.rs
    16→pub fn start_worker_pool_manager …

sps/src/cli/

sps-common/src/dependency/

sps-common/src/model/

sps-core/src/build/compile/

sps-core/src/install/bottle/

sps-core/src/install/cask/

sps-core/src/uninstall/

sps-core/src/upgrade/
