tests/snapshots/snapshots__cpp_sample_budget_10000.snap
---
source: tests/snapshots.rs
expression: output
---
sample.cpp
     5→#include "token.h"
     7→#define MAX_TOKENS 1024
    11→/// A lexical token with its kind and source span.
    12→class Token …
    17→    Kind kind() const { return kind_; }
    18→    int start() const { return start_; }
    19→    int end() const { return end_; }
    27→/// Interface for visiting tokens in a stream.
    28→class Visitor …
    30→    virtual ~Visitor() = default;
    35→/// A generic token parser that tokenizes source text.
    36→template<typename Alloc = std::allocator<Token>> …
    47→/// Process input and return extracted tokens.
    48→std::vector<Token> process(const std::string& input);
    50→static void helper() {}
    52→using TokenPtr = std::unique_ptr<Token>;
    53→using TokenList = std::vector<Token>;
    55→struct Span …
    56→    int start;
    57→    int end;
    58→};
