tests/snapshots/snapshots__cpp_sample_budget_20.snap
---
source: tests/snapshots.rs
expression: output
---
sample.cpp
    48→std::vector<Token> process …
