tests/snapshots/snapshots__cpp_sample_budget_200.snap
---
source: tests/snapshots.rs
expression: output
---
sample.cpp
     7→#define MAX_TOKENS …
    11→/// A lexical token with its kind and source span.
    12→class Token …
    27→/// Interface for visiting tokens in a stream.
    28→class Visitor …
    35→/// A generic token parser that tokenizes source text.
    36→template<typename Alloc = std::allocator<Token>> …
    47→/// Process input and return extracted tokens.
    48→std::vector<Token> process(const std::string& input);
    50→static void helper() {}
    52→using TokenPtr …
    53→using TokenList …
    55→struct Span …
    56→    int start;
    57→    int end;
    58→};
