tests/snapshots/snapshots__cpp_sample_budget_50.snap
---
source: tests/snapshots.rs
expression: output
---
sample.cpp
     5→#include "token.h"
     7→#define MAX_TOKENS …
     9→namespace token …
